@@ -9,6 +9,7 @@ Version 5.6.0 (TBD)
     Fixed font size keywords such as `medium` not displaying correctly in font size menus #TINY-6291
     Fixed an issue where some attributes in table cells were not copied over to new rows or columns #TINY-6485
     Fixed some incorrect types in the new TypeScript declaration file #TINY-6413
+    Fixed a memory leak in IE 11 that prevented editor instances being garbage collected #TINY-6570
 Version 5.5.1 (TBD)
     Fixed pressing the down key near the end of a document incorrectly raising an exception #TINY-6471
     Fixed incorrect Typescript types for the `Tools` API #TINY-6475
